--- a/src/components/pages/profile/postBlock/PostItem.module.css
+++ b/src/components/pages/profile/postBlock/PostItem.module.css
@@ -1,10 +1,21 @@
 .postItem{
     display: flex;
     width: 100%;
-    background-color: coral;
-    padding: 0 15px;
+    background-color: white;
+    padding: 15px;
+    justify-content: space-between;
+    margin: 5px 0px;
+    min-height: 100px;
 }
 
 .postItem img {
     width: 50px;
+    display: block;
+    border-radius: 50%;
+}
+.postItem p {
+    display: block;
+}
+.postItem button{
+    margin-left: 10px;
 }
